--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -2,20 +2,18 @@ import /init.recovery.tee.rc
 import /init.recovery.trustonic.rc
 
 on init
-    setprop sys.usb.configfs 1
-    setprop sys.usb.ffs.aio_compat 0
-
     export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw:/system/lib64/hw
 
+    setprop sys.usb.configfs 1
+    setprop sys.usb.controller "musb-hdrc"
+    setprop sys.usb.ffs.aio_compat 0
+ 
 on fs && property:ro.debuggable=0
     # distinguish USB shoulde connect or not, i.e. CDP vs SDP
     write /sys/class/udc/musb-hdrc/device/cmode 2
     # set charging free due to it wait for USB activation
     start adbd
-
-    write /sys/class/power_supply/usb/otg_switch 1
-    write /sys/class/oplus_chg/usb/otg_switch 1
-
+       
 on post-fs
     # Support A/B feature for EMMC and UFS boot region
     symlink /dev/block/sda /dev/block/mmcblk0boot0
@@ -29,8 +27,30 @@ on post-fs
     
     start mtk.plpath.utils.link
 
-on property:ro.crypto.state=encrypted && property:ro.crypto.type=file
-    install_keyring
+on property:persist.vendor.mtk.pl_lnk=1
+    symlink /dev/block/mapper/pl_a /dev/block/by-name/preloader_raw_a
+    symlink /dev/block/mapper/pl_b /dev/block/by-name/preloader_raw_b
+    symlink /dev/block/mapper/pl_a /dev/block/platform/bootdevice/by-name/preloader_raw_a
+    symlink /dev/block/mapper/pl_b /dev/block/platform/bootdevice/by-name/preloader_raw_b
+
+# Fix ro.vendor.mtk_ufs_support remove issue of recovery mode
+on property:vendor.mtk.boot0_linka=1
+    symlink /dev/block/sda /dev/block/mmcblk0boot0
+
+on property:vendor.mtk.boot0_linkb=1
+    symlink /dev/block/sdb /dev/block/mmcblk0boot0
+
+on property:vendor.mtk.boot0_linkc=1
+    symlink /dev/block/sdc /dev/block/mmcblk0boot0
+
+on property:vendor.mtk.boot1_linka=1
+    symlink /dev/block/sda /dev/block/mmcblk0boot1
+
+on property:vendor.mtk.boot1_linkb=1
+    symlink /dev/block/sdb /dev/block/mmcblk0boot1
+
+on property:vendor.mtk.boot1_linkc=1
+    symlink /dev/block/sdc /dev/block/mmcblk0boot1
     
 service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
     class main
@@ -94,11 +114,11 @@ service keymaster_attestation-1-1 /vendor/bin/vendor.mediatek.hardware.keymaster
 
 service paytrigger_hal_service /vendor/bin/vendor.mediatek.hardware.paytrigger@1.0-service
     interface vendor.mediatek.hardware.paytrigger@1.0::IPayTrigger default
-	class hal
-	user root
-	group root
+    class hal
+    user root
+    group root
     disabled
-	seclabel u:r:recovery:s0
+    seclabel u:r:recovery:s0
 
 on property:vendor.sys.listener.registered=true
     start mobicore
